force-app/main/default/objects/Company_Custom_Settings__c/Company_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Company Custom Settings</label>
</CustomObject>