force-app/main/default/objects/Company_Custom_Settings__c/fields/Auto_Create_Service_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Service_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Service Invoice</label>
    <type>Checkbox</type>
</CustomField>