force-app/main/default/objects/Company_Custom_Settings__c/fields/Bank_Registry_Email__c.field-meta.xml
<CustomField>
    <fullName>Bank_Registry_Email__c</fullName>
    <inlineHelpText>Multiple Email addresses separated by comma</inlineHelpText>
    <label>Bank Registry Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>