force-app/main/default/objects/Company_Custom_Settings__c/fields/Default_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact__c</fullName>
    <description>Default distributor contact ID used in BQ</description>
    <inlineHelpText>Default distributor contact ID used in BQ</inlineHelpText>
    <label>Default Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>