force-app/main/default/objects/Company_Custom_Settings__c/fields/Default_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Default_Distributor__c</fullName>
    <description>Default distributor ID used in BQ</description>
    <inlineHelpText>Default distributor ID used in BQ</inlineHelpText>
    <label>Default Distributor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>