force-app/main/default/objects/Company_Custom_Settings__c/fields/Default_KP_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_KP_Contact__c</fullName>
    <description>Default Filigreen contact on all KP orders from Quick base API</description>
    <inlineHelpText>Default Filigreen contact on all KP orders from Quick base API</inlineHelpText>
    <label>Default KP Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>