force-app/main/default/objects/Company_Custom_Settings__c/fields/Default_License__c.field-meta.xml
<CustomField>
    <fullName>Default_License__c</fullName>
    <description>Default state license ID used in BQ</description>
    <inlineHelpText>Default state license ID used in BQ</inlineHelpText>
    <label>Default License</label>
    <length>18</length>
    <type>Text</type>
</CustomField>