force-app/main/default/objects/Company_Custom_Settings__c/fields/Driver_License_Expire_N1_Days_Notice__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Expire_N1_Days_Notice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Driver License Expire N1 Days Notice</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>