force-app/main/default/objects/Company_Custom_Settings__c/fields/Exclude_D2D_License_Types__c.field-meta.xml
<CustomField>
    <fullName>Exclude_D2D_License_Types__c</fullName>
    <label>Exclude D2D License Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>