force-app/main/default/objects/Company_Custom_Settings__c/fields/Exclude_Excise_Tax_Types__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Excise_Tax_Types__c</fullName>
    <label>Exclude Excise Tax Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>