force-app/main/default/objects/Company_Custom_Settings__c/fields/Expire_Days__c.field-meta.xml
<CustomField>
    <fullName>Expire_Days__c</fullName>
    <label>Expire Days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>