force-app/main/default/objects/Company_Custom_Settings__c/fields/IsFirst_Expire_Batch__c.field-meta.xml
<CustomField>
    <fullName>IsFirst_Expire_Batch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsFirst Expire Batch</label>
    <type>Checkbox</type>
</CustomField>