force-app/main/default/objects/Company_Custom_Settings__c/fields/LateFee__c.field-meta.xml
<CustomField>
    <fullName>LateFee__c</fullName>
    <label>Late Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>