force-app/main/default/objects/Company_Custom_Settings__c/fields/RDT_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>RDT_CC_Email__c</fullName>
    <label>RDT CC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>