force-app/main/default/objects/Company_Custom_Settings__c/fields/Route_Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>Route_Destination_Address__c</fullName>
    <description>Used in Google route calculation</description>
    <label>Route Destination Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>