force-app/main/default/objects/Company_Custom_Settings__c/fields/Route_Origin_Address__c.field-meta.xml
<CustomField>
    <fullName>Route_Origin_Address__c</fullName>
    <label>Route Origin Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>