force-app/main/default/objects/Company_Custom_Settings__c/fields/Second_Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>Second_Warehouse_Id__c</fullName>
    <label>Second Warehouse Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>