force-app/main/default/objects/Company_Custom_Settings__c/fields/Ship_Confirm_Master_User_Group__c.field-meta.xml
<CustomField>
    <fullName>Ship_Confirm_Master_User_Group__c</fullName>
    <label>Ship Confirm Master User Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>