force-app/main/default/objects/Company_Custom_Settings__c/fields/State_License_File_Id__c.field-meta.xml
<CustomField>
    <fullName>State_License_File_Id__c</fullName>
    <label>State License File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>